Closed Bug 1114885 Opened 11 years ago Closed 11 years ago

Unreferenced media elements with MediaSources can leak due to NETWORK_LOADING

Categories

(Core :: Audio/Video, defect, P1)

x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla37
Tracking Status
firefox36 --- verified
firefox37 --- verified

People

(Reporter: karlt, Assigned: karlt)

References

(Blocks 1 open bug)

Details

Attachments

(3 files)

Media elements keep a self reference when networkState is NETWORK_LOADING. Usually a load request would eventually time out, networkState would change, and the self reference would be removed, but this will not happen when the source is a MediaSource.
Depends on: 1114888
1. Set media.mediasource.enabled and media.mediasource.webm.enabled prefs to true, if not already. 2. Load testcase. 3. Observe memory use growing (in top or similar). 4. Load about:memory in another tab. 5. Click "Minimize Memory Use". Expected: Memory usage reduces somewhat, before growing again. Actual: Memory use continues to rise.
Blocks: 1116382
Depends on: 1116384
Depends on: 1116676
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Comment on attachment 8542415 [details] [diff] [review] allow media elements to be GC'd when their MediaSource is unreferenced r? Approval Request Comment [Feature/regressing bug #]: MSE [User impact if declined]: Less consistent testing, YouTube videos consume more resources. [Describe test coverage new/current, TBPL]: Landed on m-c. [Risks and why]: Low. This is a small change and should only affect MSE playback. [String/UUID change made/needed]: None.
Attachment #8542415 - Flags: approval-mozilla-beta?
Attachment #8542415 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
Verified using STR from comment 2 and the attached testcases and got the expected results using: 1. Firefox 36 beta 2, build ID: 20150120155007 2. Latest Aurora, build ID: 20150121004011 Tested on Ubuntu 12.04 64-bit.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: