Bug 1114885 - Allow media elements to be GC'd when their MediaSource is unreferenced. r=roc, a=sledru